--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </header>
     <div class="container">
         <div class="cards"></div>
+        <div class="pagination"></div>
     </div>
 </body>
 
